web/book/tests/examples/snapshots/examples__book__transforms__group__1.snap
---
source: web/book/tests/examples/book.rs
expression: "from employees\nsort join_date\ntake 1\n"
---
SELECT
  *
FROM
  employees
ORDER BY
  join_date
LIMIT
  1

