web/book/tests/examples/snapshots/examples__book__transforms__group__2.snap
---
source: web/book/tests/examples/book.rs
expression: "from employees\ngroup role (\n  sort join_date  # taken from above\n  take 1\n)\n"
---
WITH table_1 AS (
  SELECT
    *,
    ROW_NUMBER() OVER (
      PARTITION BY role
      ORDER BY
        join_date
    ) AS _expr_0
  FROM
    employees
)
SELECT
  *
FROM
  table_1 AS table_0
WHERE
  _expr_0 <= 1

